test(cluster,it): re-enable InstanceRegistryIT and HeadersRoundTripIT
InstanceRegistryIT: two tests still asserted against the joxette_instances
`roles` column, which SchemaManager.migrateJoxetteInstances dropped in favor
of recording_enabled/compaction_enabled booleans. Update the manual INSERT
and the GET /instances assertions to match the current schema, and rename
getInstancesIncludesRolesAndCatalogBackend to reflect what it now checks.

HeadersRoundTripIT: writeRecord passed List.of((String) null) as the
messageTypes batch parameter, which throws NPE at construction (List.of
rejects null elements) — switched to Collections.singletonList(null).
Fixing the NPE surfaced a second, previously-masked mismatch: GET
/cassettes/topics/{topic} always runs a "metadata-only" TransformPipeline
that injects six x-replay-id/x-original-*/x-replayed-at provenance headers
into every response (CassetteController, by design, since the transform
pipeline commit). fetchFirstRecordHeaders now strips those well-known keys
before asserting, so the tests validate only the headers they themselves
wrote.

Clears the last two entries in docs/known-issues.md and the now-stale
maven-failsafe-plugin comment in joxette-service/pom.xml.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>